# PMTeamBuilder

./: LICENSE  README.md  migrate_data.py  pyproject.toml
frontend/: components.d.ts  index.html  package.json  vite.config.ts
frontend/src/: App.vue  main.ts  shims-vue.d.ts  vite-env.d.ts
frontend/src/components/Admin/: AdminReportManagement.vue  AdminSensitiveWords.vue  (+1 more)
frontend/src/router/: index.ts
frontend/src/services/: AdminService.ts  AuthService.ts  NotificationService.ts  UserService.ts
frontend/src/stores/: admin.ts  auth.ts  notification.ts  teamSquare.ts  user.ts
frontend/src/utils/: constants.ts
frontend/src/views/: AdminView.vue  FavoritesView.vue  HomeView.vue  LoginView.vue  MyTeamsView.vue  ProfileView.vue  RegisterView.vue  TeamBuilderEditView.vue  TeamBuilderView.vue  TeamShareView.vue  TeamSquareView.vue  TeamView.vue  VerifyEmailView.vue
src/instance/: fetch_progress.pkl
src/pmteambuilder/: __init__.py  app.py
src/pmteambuilder/api/: admin.py  auth.py  notification.py  pokemon.py  team.py
src/pmteambuilder/config/: __init__.py  config.py
src/pmteambuilder/models/: __init__.py  ability.py  generation.py  item.py  move.py  notification.py  pokemon.py  pokemon_form_ability_map.py  pokemon_move_learnset.py  pokemon_species.py  report.py  sensitive_word.py  team.py  team_like.py  token.py  type.py  user.py  version_group.py
src/pmteambuilder/services/: auth_service.py  email_service.py  notification_service.py  pokemon_service.py  report_service.py  sensitive_word_service.py  team_service.py
src/pmteambuilder/utils/: decorators.py  redis_service.py
(+28 files in other folders)
